metadata-classic/objects/LiveText__Exception__c.object
<CustomObject>
    <description>Exception</description>
    <fields>
        <fullName>CreatedDateTime__c</fullName>
        <formula>CreatedDate</formula>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LiveText__AssociatedUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated User</description>
        <label>AssociatedUser</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiveText__ErrorDescription__c</fullName>
        <description>Error Description</description>
        <label>ErrorDescription</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LiveText__ObjectId__c</fullName>
        <description>Object Id.</description>
        <label>ObjectId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Priority__c</fullName>
        <description>Priority</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                    <default>true</default>
                    <label>High</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>LiveMessage Exception</label>
    <listViews>
        <fullName>ExceptionsFromOutage</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>LiveText__AssociatedUser__c</columns>
        <columns>LiveText__ErrorDescription__c</columns>
        <columns>LiveText__ObjectId__c</columns>
        <columns>LiveText__Priority__c</columns>
        <columns>CreatedDateTime__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>1/8/2018 12:00 AM</value>
        </filters>
        <label>x - Exceptions on 1/8 from outage?</label>
        <sharedTo>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LiveText__All</fullName>
        <columns>NAME</columns>
        <columns>LiveText__AssociatedUser__c</columns>
        <columns>LiveText__ErrorDescription__c</columns>
        <columns>LiveText__ObjectId__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>User_Lookup</fullName>
        <columns>NAME</columns>
        <columns>LiveText__AssociatedUser__c</columns>
        <columns>LiveText__ErrorDescription__c</columns>
        <columns>LiveText__ObjectId__c</columns>
        <columns>LiveText__Priority__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>mtancang</value>
        </filters>
        <label>User Lookup</label>
    </listViews>
    <nameField>
        <label>Exception Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LiveMessage Exceptions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>